--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "prepare": "husky"
   },
   "husky": {
-    // "hooks": {
-    //   "pre-commit": "lint-staged"
-    // }
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.{js,vue}": [
