--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uni-preset-vue",
+  "name": "instant-uni",
   "version": "0.0.0",
   "scripts": {
     "dev:app": "uni -p app",
@@ -74,22 +74,22 @@
     "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.24.7",
     "@dcloudio/types": "^3.4.8",
     "@dcloudio/uni-automator": "3.0.0-4010520240507001",
     "@dcloudio/uni-cli-shared": "3.0.0-4010520240507001",
     "@dcloudio/uni-stacktracey": "3.0.0-4010520240507001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4010520240507001",
-    "@vitejs/plugin-vue": "^5.0.5",
     "@vue/runtime-core": "^3.4.21",
     "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.26.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
     "sass": "^1.77.5",
-    "vite": "5.2.8"
-  },
-  "type": "module"
+    "vite": "^5.2.8"
+  }
 }
